[package]
name = "probe-rs-rtt-runner"
version = "0.1.0"
authors = ["Eike Siewertsen <eike@allv.is>"]
edition = "2018"

[dependencies]
probe-rs = { version = "0.6.2", git = "https://github.com/probe-rs/probe-rs", branch = "serial-id" }
probe-rs-rtt = { git = "https://github.com/fry/probe-rs-rtt", branch = "api-changes" }
env_logger = "0.7.1"
anyhow = "1.0.31"
log = "0.4.8"
structopt = "0.3.14"
ctrlc = "3.1.4"
goblin = "0.2.3"
